Added try catch and added helper

--- a/backend/Avensia.Storefront.Developertest/Avensia.Storefront.Developertest.csproj
+++ b/backend/Avensia.Storefront.Developertest/Avensia.Storefront.Developertest.csproj
@@ -52,6 +52,7 @@
     <Compile Include="DefaultProductDto.cs" />
     <Compile Include="DefaultRegistry.cs" />
     <Compile Include="Enums\Currency.cs" />
+    <Compile Include="Helper\Helper.cs" />
     <Compile Include="IProductDto.cs" />
     <Compile Include="IProductRepository.cs" />
     <Compile Include="ProductContainer.cs" />
